Fix: code block scrollbar should be conditionally displayed only when overflow

--- a/styles/post.css
+++ b/styles/post.css
@@ -31,7 +31,7 @@ body > footer a {
 }
 
 pre {
-  overflow-x: scroll;
+  overflow-x: auto;
 
   code {
     /* all: revert-layer;  not working as expected */
